Use Deque instead of Lists for context